src/validation/tests/snapshots/rusty__validation__tests__variable_length_array_test__builtins__builtins_called_with_invalid_number_of_params.snap
---
source: src/validation/tests/variable_length_array_test.rs
expression: diagnostics
---
error[E032]: Invalid parameter count. Received 0 parameters while 2 parameters were expected.
   ┌─ <internal>:13:13
   │
13 │             LOWER_BOUND();
   │             ^^^^^^^^^^^ Invalid parameter count. Received 0 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 1 parameters while 2 parameters were expected.
   ┌─ <internal>:14:13
   │
14 │             LOWER_BOUND(vla);
   │             ^^^^^^^^^^^ Invalid parameter count. Received 1 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 1 parameters while 2 parameters were expected.
   ┌─ <internal>:15:13
   │
15 │             LOWER_BOUND(1);
   │             ^^^^^^^^^^^ Invalid parameter count. Received 1 parameters while 2 parameters were expected.

error[E031]: Expected a reference for parameter arr because their type is InOut
   ┌─ <internal>:15:25
   │
15 │             LOWER_BOUND(1);
   │                         ^ Expected a reference for parameter arr because their type is InOut

error[E037]: Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'
   ┌─ <internal>:15:25
   │
15 │             LOWER_BOUND(1);
   │                         ^ Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'

error[E032]: Invalid parameter count. Received 4 parameters while 2 parameters were expected.
   ┌─ <internal>:16:13
   │
16 │             LOWER_BOUND(vla, 1, 2, 3);
   │             ^^^^^^^^^^^ Invalid parameter count. Received 4 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 0 parameters while 2 parameters were expected.
   ┌─ <internal>:18:13
   │
18 │             UPPER_BOUND();
   │             ^^^^^^^^^^^ Invalid parameter count. Received 0 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 1 parameters while 2 parameters were expected.
   ┌─ <internal>:19:13
   │
19 │             UPPER_BOUND(vla);
   │             ^^^^^^^^^^^ Invalid parameter count. Received 1 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 1 parameters while 2 parameters were expected.
   ┌─ <internal>:20:13
   │
20 │             UPPER_BOUND(1);
   │             ^^^^^^^^^^^ Invalid parameter count. Received 1 parameters while 2 parameters were expected.

error[E031]: Expected a reference for parameter arr because their type is InOut
   ┌─ <internal>:20:25
   │
20 │             UPPER_BOUND(1);
   │                         ^ Expected a reference for parameter arr because their type is InOut

error[E037]: Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'
   ┌─ <internal>:20:25
   │
20 │             UPPER_BOUND(1);
   │                         ^ Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'

error[E032]: Invalid parameter count. Received 4 parameters while 2 parameters were expected.
   ┌─ <internal>:21:13
   │
21 │             UPPER_BOUND(vla, 1, 2, 3);
   │             ^^^^^^^^^^^ Invalid parameter count. Received 4 parameters while 2 parameters were expected.


